Fix previous version testimonial style overlap issue

--- a/assets/css/new-style.css
+++ b/assets/css/new-style.css
@@ -411,7 +411,8 @@
 .lnhr_new_testimonial__2 .lnhr_new_testimonial__slider .swiper-pagination .swiper-pagination-bullet {
     width: 20px;
     height: 20px;
-    background: #aaa3a3;
+    background: #dadada;
+    opacity: 0.25;
     border: none;
     outline: none;
     border-radius: 4px;
@@ -420,6 +421,7 @@
 }
 .lnhr_new_testimonial__2 .lnhr_new_testimonial__slider .swiper-pagination .swiper-pagination-bullet.swiper-pagination-bullet-active {
     background: #CDBF83;
+    opacity: 1;
 }
 .lnhr_new_testimonial__2 .lnhr_new_testimonial__slider .swiper-pagination .swiper-pagination-bullet:hover,
 .lnhr_new_testimonial__2 .lnhr_new_testimonial__slider .swiper-pagination .swiper-pagination-bullet:focus {
@@ -438,6 +440,10 @@
     border-radius: 50%;
     -webkit-font-smoothing: antialiased;
     -moz-osx-font-smoothing: grayscale;
+}
+.lnhr_new_testimonial__2.lnhr_new_testimonial .lnhr_new_testimonial__slider .swiper-slide .lnhr_new_testimonial_star img {
+    width: auto;
+    max-width: 100%;
 }
 @media screen and (max-width: 1439px) {
     .lnhr_new_testimonial__2::after {
